test/cases/parser/Generic1.errors
src/Generic1.b:7:5: Syntax error (expected statement)
