test/cases/parser/Generic1.b
module Generic1
interface {
  function f<a>();

  function test()
  {
    f<i32>;
  }
}
